# ComputerVision

./: .gitignore  CMakeLists.txt  README.md
Source/: CMakeLists.txt  CVImage.hh  CameraCapture.cc  DigitRecognition.cc  DigitRecognition.cc.bak  DisplayImage.cc  FindContours.cc  FindCorners.cc  Image.hh  ImageMoment.cc  ImageMoment.hh  ImageMomentComputer.cc  LinearSVM.cc  NonlinearSVM.cc  SimpleRoot.cc  SimpleTesseract.cc  SudokuReader.cc  SudokuReader.cc.bak  VideoCapture.cc
